# 6clop

./: .gitignore  CMakeLists.txt  README.md  doxygen.config  main.cpp
doc/html/: annotated.html  box__filter_8cpp.html  box__filter_8hpp.html  box__filter_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  classFileHandle-members.html  classFileHandle.html  classImagePPM-members.html  classImagePPM.html  classRay-members.html  classRay.html  classScene-members.html  classScene.html  classcamera_1_1Camera-members.html  classcamera_1_1Camera.html  classcamera_1_1PerspectiveCamera-members.html  classcamera_1_1PerspectiveCamera.html  classes.html  classfilm_1_1Film-members.html  classfilm_1_1Film.html  classfilter_1_1BoxFilter-members.html  classfilter_1_1BoxFilter.html  classfilter_1_1Filter-members.html  classfilter_1_1Filter.html  classgeometry_1_1Bound2-members.html  classgeometry_1_1Bound2.html  classgeometry_1_1Bound2iIterator-members.html  classgeometry_1_1Bound2iIterator.html  classhitable_1_1Hitable-members.html  classhitable_1_1Hitable.html  classhitable_1_1Sphere-members.html  classhitable_1_1Sphere.html  classintegrator_1_1HitIntegrator-members.html  classintegrator_1_1HitIntegrator.html  classintegrator_1_1Integrator-members.html  classintegrator_1_1Integrator.html  classintegrator_1_1SamplerIntegrator-members.html  classintegrator_1_1SamplerIntegrator.html  classsampler_1_1ConstSampler-members.html  (+96 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  (+49 more)
doc/latex/: annotated.tex  box__filter_8cpp.tex  box__filter_8hpp.tex  camera_8hpp.tex  classFileHandle.tex  classImagePPM.tex  classRay.tex  classScene.tex  classcamera_1_1Camera.eps  classcamera_1_1Camera.tex  classcamera_1_1PerspectiveCamera.eps  classcamera_1_1PerspectiveCamera.tex  classfilm_1_1Film.tex  classfilter_1_1BoxFilter.eps  classfilter_1_1BoxFilter.tex  classfilter_1_1Filter.eps  classfilter_1_1Filter.tex  classgeometry_1_1Bound2.tex  classgeometry_1_1Bound2iIterator.tex  classhitable_1_1Hitable.eps  classhitable_1_1Hitable.tex  classhitable_1_1Sphere.eps  classhitable_1_1Sphere.tex  classintegrator_1_1HitIntegrator.eps  classintegrator_1_1HitIntegrator.tex  classintegrator_1_1Integrator.tex  classintegrator_1_1SamplerIntegrator.eps  classintegrator_1_1SamplerIntegrator.tex  classsampler_1_1ConstSampler.eps  classsampler_1_1ConstSampler.tex  classsampler_1_1NaiveSampler.eps  classsampler_1_1NaiveSampler.tex  classsampler_1_1Sampler.eps  classsampler_1_1Sampler.tex  classtransform_1_1Transform.tex  const__sampler_8cpp.tex  const__sampler_8hpp.tex  cyclop_8cpp.tex  cyclop_8hpp.tex  dir_05f662742734ae5b4756600b03cf1828.tex  (+49 more)
experiments/: ffilm.py  film.py  main.py  requirements.txt  transforms.py
inotify/: coverage.sh  hit-integrator-render-test.ppm  pw  test  test-film.ppm  test-ppm.ppm  watch-run-test-valgrind.sh  watch-run-test.sh
src/: CMakeLists.txt
src/cameras/: perspective_camera.cpp  perspective_camera.hpp
src/core/: camera.cpp  camera.hpp  cyclop.cpp  cyclop.hpp  filehandle.cpp  filehandle.hpp  film.cpp  film.hpp  filter.hpp  geometry.cpp  geometry.hpp  hitable.hpp  image_ppm.cpp  image_ppm.hpp  integrator.cpp  integrator.hpp  light.hpp  material.hpp  ray.cpp  ray.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp
src/ext/: progress_bar.hpp
src/filters/: box_filter.cpp  box_filter.hpp
src/hitables/: brute_aggregate.cpp  brute_aggregate.hpp  sphere.cpp  sphere.hpp
src/integrators/: ao_integrator.cpp  ao_integrator.hpp  direct_lighting_integrator.cpp  direct_lighting_integrator.hpp  hit_integrator.cpp  hit_integrator.hpp
src/lights/: point_light.cpp  point_light.hpp
src/materials/: dielectric_material.cpp  dielectric_material.hpp  matte_material.cpp  matte_material.hpp
src/samplers/: const_sampler.cpp  const_sampler.hpp  naive_sampler.cpp  naive_sampler.hpp
test/: CMakeLists.txt  camera_test.cpp  geometry_test.cpp  ray_test.cpp  transform_test.cpp
test/cameras/: perspective_camera_test.cpp
test/core/: cyclop_test.cpp  filehandle_test.cpp  film_test.cpp  geometry_test.cpp  image_ppm_test.cpp  scene_test.cpp  transform_test.cpp
test/filters/: box_filter_test.cpp
test/hitables/: brute_aggregate_test.cpp  sphere_test.cpp
test/integrators/: ao_integrator_test.cpp  hit_integrator_test.cpp
test/samplers/: naive_sampler_test.cpp
