add_executable(
    unit_tests
    core/cyclop_test.cpp
    core/geometry_test.cpp
    core/ray_test.cpp
    core/transform_test.cpp
    core/filehandle_test.cpp
    core/film_test.cpp
    cameras/perspective_camera_test.cpp
    hitables/sphere_test.cpp
    integrators/hit_integrator_test.cpp
    samplers/naive_sampler_test.cpp
    filters/box_filter_test.cpp
    )

target_link_libraries(
    unit_tests
    gtest_main
    Eigen3::Eigen
    core
    hitables
    cameras
    integrators
    samplers
    filters
    )

add_test(
  NAME
    unit
  COMMAND
    ${CMAKE_BINARY_DIR}/test/unit_tests
  )